--- a/pages/templates/pages/createpage.html
+++ b/pages/templates/pages/createpage.html
@@ -71,8 +71,8 @@
 
                 </div>
                 <div class="card-footer text-right">
-                  <a href="#" class="btn btn-success">{% trans "Edit" %}</a>
-                  <a href="{% url module.delete_url_name object.id module.id %}" class="btn btn-danger">{% trans "Delete" %}</a>
+                  <a href="{% url module.edit_url_name module.id %}" class="btn btn-success">{% trans "Edit" %}</a>
+                  <a href="{% url module.delete_url_name module.id %}" class="btn btn-danger">{% trans "Delete" %}</a>
                 </div>
               </div>
             </div>
