--- a/pages/templates/pages/createcommunicationmodule.html
+++ b/pages/templates/pages/createcommunicationmodule.html
@@ -38,6 +38,9 @@
               </ul>
             </div>
           {% endif %}
+          {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+          {% endfor %}    
           <div class="form-group">
             <label for="{{form.situation.auto_id}}">
               {{ form.situation.label }}
