--- a/pages/templates/pages/deletemodule.html
+++ b/pages/templates/pages/deletemodule.html
@@ -4,10 +4,10 @@
 {% block content %}
 <section id="page" class="pb-5">
   <div class="container">
-    {% if page.title %}
+    {% if object.page.title %}
       <div class="row p-5">
         <div class="col-12">
-          <h1>{{page.title}}</h1>
+          <h1>{{object.page.title}}</h1>
         </div>
       </div>
     {% endif %}
