--- a/home/templates/home/example2.html
+++ b/home/templates/home/example2.html
@@ -122,7 +122,7 @@
                 <td rowspan="2">{% trans "Wonder pills" %}</td>
                 <td>{% trans "Breakfast" %}</td>
                 <td>2</td>
-                <td rowspan="2">{% trans "Take with my favorite banana yoghurt" %}</td>
+                <td rowspan="2">{% trans "Take with my favorite banana yogurt" %}</td>
               </tr>
               <tr>
                 <td>{% trans "Dinner" %}</td>
