--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -73,7 +73,7 @@
         </p>
       </div>
       <div class="col-12 col-md-4">
-        <h3>{% trans "Explaining isn't allways easy" %}</h3>
+        <h3>{% trans "Explaining isn't always easy" %}</h3>
         <p>{% blocktrans trimmed %}
           By creating an infographic you will be prepared for those situations
           where you can't find the right words or don't have the energy to speak.
@@ -104,3 +104,4 @@
   </div>
 </section>
 {% endblock content %}
+always
