--- a/pages/templates/pages/createpage.html
+++ b/pages/templates/pages/createpage.html
@@ -43,7 +43,7 @@
       {% if modules %}
         <div class="row my-3">
           <div class="col-12">
-            <h4>{% trans "You allready have the following modules:" %} </h4>
+            <h4>{% trans "You already have the following modules:" %} </h4>
           </div>
           <div class="col-12">
             <p class="mb-0">
