--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{% block title %}{% endblock title %}</title>
   <!-- Bootstrap CSS -->
-  {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">#}
-  <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  {#<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">#}
   <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 <body>
@@ -77,13 +77,13 @@
   {% endblock content %}
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  {% comment %}
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  {% endcomment %}
+  {% comment %}
   <script src="{% static "js/jquery-3.2.1.min.js" %}"></script>
   <script src="{% static "js/bootstrap.min.js" %}"></script>
+  {% endcomment %}
   <script type="text/javascript" src="{% url 'javascript-catalog' %}"></script>
   {% block scripts %}
   {% endblock scripts %}
