--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -50,13 +50,24 @@
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              {% if user.is_authenticated %}
-                <a class="nav-link px-3 text-success" href="{% url "users:logout" %}">{{ user.username }} > {% trans "Log out" %}</a>  
-              {% else %}
+            {% if user.is_authenticated %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-success" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  {{ user.username }}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  {% if user.profile.email_confirmed %}
+                    <a class="dropdown-item" href="{% url "users:changepw" %}">{% trans "Change Password" %}</a>
+                    <div class="dropdown-divider"></div>
+                  {% endif %}
+                  <a class="dropdown-item" href="{% url "users:logout" %}">{% trans "Log out" %}</a>
+                </div>
+              </li>
+            {% else %}
+              <li class="nav-item">
                 <a class="nav-link px-3" href="{% url "users:login" %}">{% trans "Log in" context "menu item" %}</a>
-              {% endif %}
-            </li>
+              </li>
+            {% endif %}
               {% get_current_language as LANGUAGE_CODE %}
               {% get_language_info for LANGUAGE_CODE as current_language %}
               {% get_available_languages as LANGUAGES %}
