--- a/users/templates/users/pwreset.html
+++ b/users/templates/users/pwreset.html
@@ -12,7 +12,7 @@
           <h1> {% trans "Forgot Password" %} </h1>
         </div>
         <div class="card-body">
-          <form method="post" action="{% url "users:pwreset" %}">
+          <form method="post" action="{% url "users:resetpw" %}">
             <div class="row">
                 <div class="col-12">
                   <p>
@@ -26,7 +26,18 @@
               {% csrf_token %}
               <div class="form-group col-12">
                 {{ form.email.label_tag }}
-                {{ form.email|add_class:"form-control" }}
+                {% if form.email.errors %}
+                  {{ form.email|add_class:"form-control is-invalid" }}
+                  <div class="invalid-feedback">
+                    <ul class="list-unstyled">
+                      {% for error in form.email.errors %}
+                      <li><strong>{{ error|escape }}</strong></li>
+                      {% endfor %}
+                    </ul>
+                  </div>
+                {% else %}
+                  {{ form.email|add_class:"form-control" }}
+                {% endif %}
               </div>
               <div class="col-12 text-right">
                 <input type="submit" value="Submit" class="btn btn-success" />
