page_list and page management
with links to previewing and editing
generating links for sharing
and changing visibility of pages

--- a/users/templates/users/emailsent.html
+++ b/users/templates/users/emailsent.html
@@ -1,6 +1,7 @@
 {% extends "pages/base.html" %}
 {% load i18n %}
 {% block navbar %}
+{% include "pages/_nav_minimal.html" %}
 {% endblock %}
 {% block content %}
 <div class="container-fluid h-100 bg-dark">
