--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,6 +2,7 @@
 {% load widget_tweaks %}
 {% load i18n %}
 {% block navbar %}
+{% include "pages/_nav_minimal.html" %}
 {% endblock %}
 {% block content %}
 <div class="container-fluid h-100 bg-dark">
