--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -63,6 +63,10 @@
                   <a class="dropdown-item" href="{% url "users:logout" %}">{% trans "Log out" %}</a>
                 </div>
               </li>
+              <li class="nav-item {% if url_name == 'pagelist' %}active{% endif %}">
+                <a class="nav-link px-3" href="{% url "pages:pagelist" %}">{% trans "My Pages" context "menu item" %}
+                {% if url_name == 'pagelist' %}<span class="sr-only">(current)</span>{% endif %}</a>
+              </li>
             {% else %}
               <li class="nav-item">
                 <a class="nav-link px-3" href="{% url "users:login" %}">{% trans "Log in" context "menu item" %}</a>
