--- a/users/templates/users/email_register.html
+++ b/users/templates/users/email_register.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% blocktrans %}
+{% blocktrans trimmed %}
 Welcome to PAI,
 An account has been created for your email address: {{ email }}.
 To complete your registration, follow the link below to create a password:
