--- a/users/templates/users/email_pwreset.html
+++ b/users/templates/users/email_pwreset.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% blocktrans %}
+{% blocktrans trimmed %}
 Hi,
 Someone asked for password reset for email {{ email }}.
 Follow the link below to set a new password:
