--- a/users/templates/users/pwset.html
+++ b/users/templates/users/pwset.html
@@ -62,7 +62,7 @@
       {% else %}
         <div class="alert alert-danger">
           {% url "users:resetpw" as reseturl %}
-          {% blocktrans %}
+          {% blocktrans trimmed %}
           The link you used was invalid, possibly because it has already been used, or because it has expired.
           Please <a href="{{reseturl}}" class="alert-link">request a new link</a>.
           {% endblocktrans %}
