--- a/pages/static/css/main.css
+++ b/pages/static/css/main.css
@@ -11,7 +11,11 @@ html, body{
 }
 
 .fill-60-viewport {
-  min-height: 90vh
+  min-height: 60vh
+}
+
+.fill-80-viewport {
+  min-height: 80vh
 }
 
 .fill-30-viewport
