--- a/pages/templates/pages/_generalinfo.html
+++ b/pages/templates/pages/_generalinfo.html
@@ -5,9 +5,13 @@
   <div class="row align-items-end justify-content-center ">
 
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-sm-2 text-center p-5">
-      <img src="{% static "img/blank-profile-picture.png" %}" class="rounded-circle profile-img" alt="avatar">
+      {% if not module.picture %}
+        <img src="{% static "img/blank-profile-picture.png" %}" class="rounded-circle profile-img" alt="avatar">
+      {% else %}
+        <img src="{{ module.picture.url }}" class="rounded-circle profile-img" alt="avatar">
+      {% endif %}
     </div>
-    {% if module.name or module.identity %}
+    {% if module.name or module.identity or module.pronouns %}
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-sm-1 p-5">
       {% if module.name %}
         <p class="h1">{% trans "Hi," %}</p>
@@ -18,9 +22,23 @@
           </p>
       {% endif %}
       {% if module.identity %}
-        <p class="lead">{{ module.get_identity_display }}.</p>
+        {% if module.identity == "08_other" and module.identity_free %}
+          <p class="lead">{{ module.identity_free }}.</p>
+        {% else %}
+          <p class="lead">{{ module.get_identity_display }}.</p>
+        {% endif %}
+      {% endif %}
+      {% if module.pronouns %}
+        <p class="lead">My pronouns are: {{ module.pronouns }}.</p>
       {% endif %}
     </div>
     {% endif %}
   </div>
+  {% if module.remarks %}
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-8 col-lg-6 px-5 pb-5">
+        {{module.remarks}}
+      </div>
+    </div>
+  {% endif %}
 </section>
