--- a/home/templates/home/examples.html
+++ b/home/templates/home/examples.html
@@ -1,31 +1,34 @@
 {% extends "pages/base.html" %}
 {% load i18n %}
 {% block content %}
-<section id="empty">
+<section id="examples">
   <div class="container">
     <div class="row p-5">
       <div class="col-12">
         <ul class="nav nav-tabs mb-3" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active" id="ex1-tab" data-toggle="tab" href="#example1" role="tab" aria-controls="example1" aria-selected="true">{% trans "Example 1" %}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="ex2-tab" data-toggle="tab" href="#example2" role="tab" aria-controls="example2" aria-selected="false">{% trans "Example 2" %}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="ex3-tab" data-toggle="tab" href="#example3" role="tab" aria-controls="example3" aria-selected="false">{% trans "Example 3" %}</a>
-          </li>
+          {% for example in page_list %}
+            <li class="nav-item">
+              <a class="nav-link{% if forloop.first %} active{% endif%}" id="ex{{ forloop.counter }}-tab" data-toggle="tab" href="#example{{ forloop.counter }}" role="tab" aria-controls="example{{ forloop.counter }}" aria-selected={% if forloop.first %}"true"{% else %}"false"{% endif %}>{% trans "Example" %} {{forloop.counter}}</a>
+            </li>
+          {% endfor %}
         </ul>
         <div class="tab-content">
-          <div class="tab-pane fade show active" id="example1" role="tabpanel" aria-labelledby="ex1-tab">
-            {% include "home/example1.html" %}
-          </div>
-          <div class="tab-pane fade" id="example2" role="tabpanel" aria-labelledby="ex2-tab">
-            {% include "home/example2.html" %}
-          </div>
-          <div class="tab-pane fade" id="example3" role="tabpanel" aria-labelledby="ex3-tab">
-            {% include "home/example3.html" %}
-          </div>
+          {% for example in page_list %}
+            <div class="tab-pane fade{% if forloop.first %} show active{% endif %}" id="example{{forloop.counter}}" role="tabpanel" aria-labelledby="ex{{forloop.counter}}-tab">
+              {% if example.title %}
+                <div class="row py-3">
+                  <div class="col-12">
+                    <h1>{{example.title}}</h1>
+                  </div>
+                </div>
+              {% endif %}
+              {% with modules=example.get_all_modules_sorted %}
+                {% for module in modules %}
+                  {% include module.template %}
+                {% endfor %}
+              {% endwith %}
+            </div>
+          {% endfor %}
         </div>
       </div>
     </div>
